fixed z-index

--- a/reconecta-styles.css
+++ b/reconecta-styles.css
@@ -79,7 +79,7 @@
     width: 120px;
     position: absolute;
     z-index: 0;
-    left: 1229px;
+    left: 1399px;
     top: 629px;
 }
 
